<resources>
    <string name="app_name">Quản lí chi tiêu</string>
    <string name="chi_tieu_hom_nay">Chi tiêu hôm nay</string>
    <string name="thong_ke">Thống kê</string>
    <string name="them_nhom_chi_tieu">Thêm mục chi tiêu</string>
    <string name="sua_nhom_chi_tieu">Sửa mục chi tiêu</string>
    <string name="nhom_chi_tieu">Mục chi tiêu</string>
    <string name="thay_doi">Thay đổi</string>
    <string name="xoa">Xóa</string>
    <string name="ban_co_chac_xoa">Bạn có chắc muốn xóa mục này không ?</string>
    <string name="sau_khi_xoa">Sau khi xóa mục này thì những chi tiêu cũng sẽ xóa</string>
    <string name="co">Có</string>
    <string name="khong">Không</string>
    <string name="them_chi_tieu">Thêm chi tiêu</string>
    <string name="so_tien">Số tiền</string>
    <string name="chi_tiet">Chi tiết</string>
    <string name="chi_tieu">Chi tiêu</string>
    <string name="sua">Sửa</string>
    <string name="tong_hom_nay">Tổng chi tiêu</string>
    <string name="ten_nhom">Tên mục</string>
    <string name="mau">Màu</string>
    <string name="them">Thêm</string>
    <string name="huy">Hủy</string>
    <string name="hom_nay">Hôm nay</string>
    <string name="ban_chua_nhap_ten">Bạn chưa nhập tên</string>
    <string name="ban_chua_nhap_so_tien">Bạn chưa nhập số tiền</string>
    <string name="xem_lich_su">Xem lịch sử</string>
    <string name="chinh_sua_nhom">Chỉnh sửa mục</string>
    <string name="qua_trai">Thêm chi tiêu nhanh</string>
    <string name="qua_phai">Xem lịch sử nhanh</string>
    <string name="chon_thoi_gian">Chọn thời gian</string>
    <string name="ngay">Ngày</string>
    <string name="tuan">Tuần</string>
    <string name="thang">Tháng</string>
    <string name="nam">Năm</string>
    <string name="chi_tieu_trong_tuan">Chi tiêu trong tuần</string>
    <string name="chi_tieu_trong_thang">Chi tiêu trong tháng</string>

    <string name="muc_thong_ke_chi_tieu">Mục thống kê chi tiêu</string>
    <string name="theo_tuan">Theo tuần</string>
    <string name="theo_thang">Theo tháng</string>
    <string name="luu">Lưu</string>
    <string name="sua_chi_tieu">Sửa chi tiêu</string>
    <string name="tong_hop">Tổng hợp</string>
    <string name="bieu_do">Biểu đồ</string>
    <string name="tong">Tổng</string>
    <string name="chi_tieu_gan_day">Chi tiêu gần đây</string>
    <string name="an_lai_lan_nua">Ấn lại lần nữa để thoát</string>
    <string name="tu_ngay">Từ</string>
    <string name="den_ngay">Đến</string>
    <string name="chon_muc">Chọn mục thống kê</string>
</resources>