<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left_black"
            android:tint="@color/colorPrimary"/>
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chon_thoi_gian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <RadioGroup
            android:layout_marginHorizontal="10dp"
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@id/title">

            <RadioButton
                android:elevation="5dp"
                android:id="@+id/ngay"
                android:background="@drawable/background_radiobutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"

                android:text="@string/ngay" />

            <RadioButton
                android:elevation="5dp"

                android:id="@+id/tuan"
                android:background="@drawable/background_radiobutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:text="@string/tuan" />

            <RadioButton
                android:elevation="5dp"
                android:id="@+id/thang"
                android:background="@drawable/background_radiobutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:text="@string/thang" />

            <RadioButton
                android:elevation="5dp"
                android:id="@+id/nam"
                android:background="@drawable/background_radiobutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:text="@string/nam" />

        </RadioGroup>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:id="@+id/radioGroup2"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="vertical">
            <TextView
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:elevation="2dp"
                android:id="@+id/tu_ngay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:text="@string/tu_ngay" />
            <CalendarView
                android:id="@+id/calendarView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
            <TextView
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:elevation="2dp"
                android:id="@+id/den_ngay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:text="@string/den_ngay" />
            <CalendarView
                android:id="@+id/calendarView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>