<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_List_Expense">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:elevation="10dp"
        android:paddingHorizontal="5dp"
        android:paddingTop="25dp"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:weightSum="20"
        android:layout_marginBottom="20dp"
        android:id="@+id/bar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tong_hom_nay"/>
        <TextView
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/title"
            android:textColor="@color/black"
            android:drawableTint="@color/black"
            android:gravity="center"
            android:drawableRight="@drawable/ic_money_black_2"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:id="@+id/tong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000"/>
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTint="@color/black"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/icon_baseline_arrow_drop_down_24"
            android:drawableLeft="@drawable/icon_calendar_black"
            android:drawablePadding="10dp"
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/chon_thoi_gian"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:scrollbarThumbVertical="@null"
        android:requiresFadingEdge="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/bar">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">
            <LinearLayout
                android:layout_margin="10dp"
                android:background="@drawable/background_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/bieu_do"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_arrow_drop_up_24"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20dp"
                    android:text="@string/bieu_do"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <LinearLayout
                    android:id="@+id/back_pie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.github.mikephil.charting.charts.PieChart
                        android:elevation="7dp"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/piechart"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layoutAnimation="@anim/layout_animation"
                android:paddingBottom="50dp"
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>