<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/colorPrimaryDark"
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/title_background_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/nothing"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_background_layout" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/chi_tieu_trong_tuan"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/title_background_layout"
        app:layout_constraintTop_toTopOf="@id/title_background_layout" />

    <TextView
        android:drawableRight="@drawable/ic_money_black_2"
        android:drawableTint="@color/white"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="@id/title"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_money"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="100000"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_money">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scrollbarThumbHorizontal="@null">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:backgroundTint="@color/blue"
                    android:id="@+id/card1"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/background_tab"
                    android:translationZ="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout

                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:tint="@color/white"
                                android:src="@drawable/ic_money_black_2" />
                        </LinearLayout>

                        <LinearLayout
                            android:background="@drawable/background_tab"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:text="@string/chi_tieu_hom_nay"
                                android:textColor="@color/blue"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tong_chi_tieu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/ic_money_black_2"
                                android:drawablePadding="10dp"
                                android:textColor="@color/blue"
                                android:drawableTint="@color/blue"
                                android:text="100000" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card2"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="15dp"
                    android:backgroundTint="@color/green"
                    android:background="@drawable/background_tab"
                    android:translationZ="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/icon_chart_white" />
                        </LinearLayout>

                        <LinearLayout
                            android:background="@drawable/background_tab"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:text="@string/thong_ke"
                                android:textColor="@color/green"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:weightSum="10"
                android:paddingBottom="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:elevation="5dp"
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <TextView
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nhom_chi_tieu"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutAnimation="@anim/layout_animation"
                        android:orientation="vertical"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">
                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/lite_gray"/>
                <LinearLayout
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginVertical="10dp"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:gravity="center"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/icon_history_white"
                        android:drawableTint="@color/dark_gray"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chi_tieu_gan_day"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_expense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutAnimation="@anim/layout_animation"
                        android:orientation="vertical"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
                </LinearLayout>



            </LinearLayout>
        </ScrollView>



    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"

        android:src="@drawable/icon_add_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>